[package]
name = "p2pool-test"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoin = "0.32.5"
bitcoincore-rpc = "0.19.0"
serde_json = "1.0"
hex = "0.4"
secp256k1 = { version = "0.29.0", features = ["rand-std"]}
serde = "1.0"
log = "0.4.27"
env_logger = "0.11.8"
chrono = "0.4.40"
colored = "3.0.0"
